--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 /public/storage
 /storage/*.key
 /vendor
+/tmp
+/html
 .env
 .env.backup
 .env.production
@@ -17,3 +19,5 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+/_docker
+docker-compose.yml
