--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "nikaia/translation-sheet": "^1.6",
         "predis/predis": "^2.2",
         "spatie/laravel-sitemap": "^6.4"
     },
