--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/tinker": "^2.8",
         "nikaia/translation-sheet": "^1.6",
         "predis/predis": "^2.2",
-        "spatie/laravel-sitemap": "^6.4"
+        "spatie/laravel-sitemap": "^6.4",
+        "stichoza/google-translate-php": "^5.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
